# zynt-protocol

./: .gitignore  CLAUDE.md  README.md  WHITEPAPER.md
api/: README.md  openapi.yaml  package.json
api/src/: server.ts
api/src/__tests__/: compliance.test.ts
api/src/middleware/: apiKeyAuth.ts  rateLimiter.ts
api/src/routes/: exportAudit.ts  verifyTrade.ts
apps/web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: experimental-banner.tsx  programs-panel.tsx  proof-stream.tsx  providers.tsx  vault-state.tsx  wallet-button.tsx
apps/web/lib/: constants.ts
docs/: .gitignore  index.html
interactive/: dashboard.jsx  mvp-roadmap.jsx  strategic-playbook.jsx
programs/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
programs/ace_adapter/: Cargo.toml
programs/ace_adapter/src/: lib.rs
programs/audit_merkle/: Cargo.toml
programs/audit_merkle/src/: lib.rs
programs/falcon_verify/: Cargo.toml
programs/falcon_verify/src/: lib.rs
programs/hybrid_vault/: Cargo.toml
programs/hybrid_vault/src/: lib.rs
programs/regulatory_oracle/: Cargo.toml
programs/regulatory_oracle/src/: lib.rs
programs/rwa_router/: Cargo.toml
programs/rwa_router/src/: lib.rs
programs/tests/: ace_adapter.ts  e2e_integration.ts  falcon_verify.ts  phase0.ts  rwa_router.ts
research/: README.md  paper-outline.md
research/circuit-package/: anomaly_detector.onnx  sample_proof.json  settings.json  train_and_compile.py  verify_sample.sh
