[package]
name = "audit_merkle"
version = "0.1.0"
description = "SPL-compressed immutable audit trail for Zynt Protocol (SEC 17a-3/4)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "audit_merkle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "spl-account-compression/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
spl-account-compression = { workspace = true }
